[gd_scene load_steps=19 format=4 uid="uid://bqas2xfvvh2q3"]

[ext_resource type="Script" uid="uid://creum8hhrnhoc" path="res://Script/game_manager.gd" id="1_kldst"]
[ext_resource type="PackedScene" uid="uid://brxkruqdul4yb" path="res://Scenes/player.tscn" id="2_gl6un"]
[ext_resource type="PackedScene" uid="uid://b4amwnrrifsop" path="res://Scenes/Items.tscn" id="3_3so38"]
[ext_resource type="PackedScene" uid="uid://dg582v5kgpmd2" path="res://Scenes/Slime.tscn" id="3_j5yw3"]
[ext_resource type="PackedScene" uid="uid://bfffbiqfffn6n" path="res://Scenes/speed_up_prop.tscn" id="4_acvyw"]
[ext_resource type="Texture2D" uid="uid://bgua6g8esiwhm" path="res://Tiles/Outside/Outside_9_1.png" id="4_wxwew"]
[ext_resource type="FontFile" uid="uid://hix8wfjvqcf3" path="res://AssetBundle/Uranus_Pixel_11Px.ttf" id="5_b2bpf"]
[ext_resource type="AudioStream" uid="uid://b07ryp82jyxq8" path="res://AssetBundle/Audio/GameOver.mp3" id="6_7lihs"]
[ext_resource type="Theme" uid="uid://ccgw1l71prk1v" path="res://PauseTheme.tres" id="6_71axn"]
[ext_resource type="Texture2D" uid="uid://cgafrnd4k47ps" path="res://AssetBundle/Sprites/pause_normal.png" id="6_bf53h"]
[ext_resource type="Texture2D" uid="uid://d0p0aldxuuhtl" path="res://AssetBundle/Sprites/pause_pressed.png" id="7_71axn"]
[ext_resource type="Script" uid="uid://wk6y0mwymrd2" path="res://Script/power_up_ui.gd" id="7_acvyw"]
[ext_resource type="Script" uid="uid://bmm82jf5mu2ij" path="res://Script/PauseMenu.gd" id="7_dahhg"]
[ext_resource type="Texture2D" uid="uid://c4nqgf24gk0yd" path="res://Tiles/RuralTownExterior/RuralTownExterior_4_1.png" id="7_wxwew"]
[ext_resource type="Texture2D" uid="uid://bnwvydqjhxi0m" path="res://AssetBundle/Sprites/pause_hover.png" id="8_dahhg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_acvyw"]
texture = ExtResource("4_wxwew")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/bottom_right_corner = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/bottom_left_corner = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/bottom_left_corner = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
0:3/0/terrains_peering_bit/top_side = 0
0:3/0/terrains_peering_bit/top_right_corner = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
1:3/0/terrains_peering_bit/top_left_corner = 0
1:3/0/terrains_peering_bit/top_side = 0
1:3/0/terrains_peering_bit/top_right_corner = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_left_corner = 0
2:3/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_alh3a"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Basic"
terrain_set_0/terrain_0/color = Color(0.890196, 0.345098, 0.25098, 1)
sources/0 = SubResource("TileSetAtlasSource_acvyw")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_j5yw3"]

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("Slime_SpawnTimer", "GameOverTimer", "UI_ScoreLabel", "UI_GameOverLabel")]
y_sort_enabled = true
script = ExtResource("1_kldst")
Slime = ExtResource("3_j5yw3")
Slime_SpawnTimer = NodePath("Timer")
FireRateProp = ExtResource("3_3so38")
SpeedUpProp = ExtResource("4_acvyw")
GameOverTimer = NodePath("GameOverTimer")
UI_ScoreLabel = NodePath("UI/Label")
UI_GameOverLabel = NodePath("UI/GameOverLabel")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
position = Vector2(56, 0)
tile_map_data = PackedByteArray("AAANAAgAAAACAAMAAAANAAcAAAACAAIAAAANAAYAAAACAAIAAAANAAUAAAACAAIAAAANAAQAAAACAAIAAAANAAMAAAACAAIAAAANAAIAAAACAAIAAAANAAEAAAACAAIAAAANAAAAAAACAAIAAAANAP//AAACAAIAAAANAP7/AAACAAIAAAANAP3/AAACAAIAAAANAPz/AAACAAIAAAANAPv/AAACAAIAAAANAPr/AAACAAIAAAANAPn/AAACAAIAAAANAPj/AAACAAIAAAANAPf/AAACAAEAAAAMAAgAAAABAAMAAAAMAAcAAAABAAIAAAAMAAYAAAABAAIAAAAMAAUAAAABAAIAAAAMAAQAAAABAAIAAAAMAAMAAAABAAIAAAAMAAIAAAABAAIAAAAMAAEAAAABAAIAAAAMAAAAAAABAAIAAAAMAP//AAABAAIAAAAMAP7/AAABAAIAAAAMAP3/AAABAAIAAAAMAPz/AAABAAIAAAAMAPv/AAABAAIAAAAMAPr/AAABAAIAAAAMAPn/AAABAAIAAAAMAPj/AAABAAIAAAAMAPf/AAABAAEAAAALAAgAAAABAAMAAAALAAcAAAABAAIAAAALAAYAAAABAAIAAAALAAUAAAABAAIAAAALAAQAAAABAAIAAAALAAMAAAABAAIAAAALAAIAAAABAAIAAAALAAEAAAABAAIAAAALAAAAAAABAAIAAAALAP//AAABAAIAAAALAP7/AAABAAIAAAALAP3/AAABAAIAAAALAPz/AAABAAIAAAALAPv/AAABAAIAAAALAPr/AAABAAIAAAALAPn/AAABAAIAAAALAPj/AAABAAIAAAALAPf/AAABAAEAAAAKAAgAAAABAAMAAAAKAAcAAAABAAIAAAAKAAYAAAABAAIAAAAKAAUAAAABAAIAAAAKAAQAAAABAAIAAAAKAAMAAAABAAIAAAAKAAIAAAABAAIAAAAKAAEAAAABAAIAAAAKAAAAAAABAAIAAAAKAP//AAABAAIAAAAKAP7/AAABAAIAAAAKAP3/AAABAAIAAAAKAPz/AAABAAIAAAAKAPv/AAABAAIAAAAKAPr/AAABAAIAAAAKAPn/AAABAAIAAAAKAPj/AAABAAIAAAAKAPf/AAABAAEAAAAJAAgAAAABAAMAAAAJAAcAAAABAAIAAAAJAAYAAAABAAIAAAAJAAUAAAABAAIAAAAJAAQAAAABAAIAAAAJAAMAAAABAAIAAAAJAAIAAAABAAIAAAAJAAEAAAABAAIAAAAJAAAAAAABAAIAAAAJAP//AAABAAIAAAAJAP7/AAABAAIAAAAJAP3/AAABAAIAAAAJAPz/AAABAAIAAAAJAPv/AAABAAIAAAAJAPr/AAABAAIAAAAJAPn/AAABAAIAAAAJAPj/AAABAAIAAAAJAPf/AAABAAEAAAAIAAgAAAABAAMAAAAIAAcAAAABAAIAAAAIAAYAAAABAAIAAAAIAAUAAAABAAIAAAAIAAQAAAABAAIAAAAIAAMAAAABAAIAAAAIAAIAAAABAAIAAAAIAAEAAAABAAIAAAAIAAAAAAABAAIAAAAIAP//AAABAAIAAAAIAP7/AAABAAIAAAAIAP3/AAABAAIAAAAIAPz/AAABAAIAAAAIAPv/AAABAAIAAAAIAPr/AAABAAIAAAAIAPn/AAABAAIAAAAIAPj/AAABAAIAAAAIAPf/AAABAAEAAAAHAAgAAAABAAMAAAAHAAcAAAABAAIAAAAHAAYAAAABAAIAAAAHAAUAAAABAAIAAAAHAAQAAAABAAIAAAAHAAMAAAABAAIAAAAHAAIAAAABAAIAAAAHAAEAAAABAAIAAAAHAAAAAAABAAIAAAAHAP//AAABAAIAAAAHAP7/AAABAAIAAAAHAP3/AAABAAIAAAAHAPz/AAABAAIAAAAHAPv/AAABAAIAAAAHAPr/AAABAAIAAAAHAPn/AAABAAIAAAAHAPj/AAABAAIAAAAHAPf/AAABAAEAAAAGAAgAAAABAAMAAAAGAAcAAAABAAIAAAAGAAYAAAABAAIAAAAGAAUAAAABAAIAAAAGAAQAAAABAAIAAAAGAAMAAAABAAIAAAAGAAIAAAABAAIAAAAGAAEAAAABAAIAAAAGAAAAAAABAAIAAAAGAP//AAABAAIAAAAGAP7/AAABAAIAAAAGAP3/AAABAAIAAAAGAPz/AAABAAIAAAAGAPv/AAABAAIAAAAGAPr/AAABAAIAAAAGAPn/AAABAAIAAAAGAPj/AAABAAIAAAAGAPf/AAABAAEAAAAFAAgAAAABAAMAAAAFAAcAAAABAAIAAAAFAAYAAAABAAIAAAAFAAUAAAABAAIAAAAFAAQAAAABAAIAAAAFAAMAAAABAAIAAAAFAAIAAAABAAIAAAAFAAEAAAABAAIAAAAFAAAAAAABAAIAAAAFAP//AAABAAIAAAAFAP7/AAABAAIAAAAFAP3/AAABAAIAAAAFAPz/AAABAAIAAAAFAPv/AAABAAIAAAAFAPr/AAABAAIAAAAFAPn/AAABAAIAAAAFAPj/AAABAAIAAAAFAPf/AAABAAEAAAAEAAgAAAABAAMAAAAEAAcAAAABAAIAAAAEAAYAAAABAAIAAAAEAAUAAAABAAIAAAAEAAQAAAABAAIAAAAEAAMAAAABAAIAAAAEAAIAAAABAAIAAAAEAAEAAAABAAIAAAAEAAAAAAABAAIAAAAEAP//AAABAAIAAAAEAP7/AAABAAIAAAAEAP3/AAABAAIAAAAEAPz/AAABAAIAAAAEAPv/AAABAAIAAAAEAPr/AAABAAIAAAAEAPn/AAABAAIAAAAEAPj/AAABAAIAAAAEAPf/AAABAAEAAAADAAgAAAABAAMAAAADAAcAAAABAAIAAAADAAYAAAABAAIAAAADAAUAAAABAAIAAAADAAQAAAABAAIAAAADAAMAAAABAAIAAAADAAIAAAABAAIAAAADAAEAAAABAAIAAAADAAAAAAABAAIAAAADAP//AAABAAIAAAADAP7/AAABAAIAAAADAP3/AAABAAIAAAADAPz/AAABAAIAAAADAPv/AAABAAIAAAADAPr/AAABAAIAAAADAPn/AAABAAIAAAADAPj/AAABAAIAAAADAPf/AAABAAEAAAACAAgAAAABAAMAAAACAAcAAAABAAIAAAACAAYAAAABAAIAAAACAAUAAAABAAIAAAACAAQAAAABAAIAAAACAAMAAAABAAIAAAACAAIAAAABAAIAAAACAAEAAAABAAIAAAACAAAAAAABAAIAAAACAP//AAABAAIAAAACAP7/AAABAAIAAAACAP3/AAABAAIAAAACAPz/AAABAAIAAAACAPv/AAABAAIAAAACAPr/AAABAAIAAAACAPn/AAABAAIAAAACAPj/AAABAAIAAAACAPf/AAABAAEAAAABAAgAAAABAAMAAAABAAcAAAABAAIAAAABAAYAAAABAAIAAAABAAUAAAABAAIAAAABAAQAAAABAAIAAAABAAMAAAABAAIAAAABAAIAAAABAAIAAAABAAEAAAABAAIAAAABAAAAAAABAAIAAAABAP//AAABAAIAAAABAP7/AAABAAIAAAABAP3/AAABAAIAAAABAPz/AAABAAIAAAABAPv/AAABAAIAAAABAPr/AAABAAIAAAABAPn/AAABAAIAAAABAPj/AAABAAIAAAABAPf/AAABAAEAAAAAAAgAAAABAAMAAAAAAAcAAAABAAIAAAAAAAYAAAABAAIAAAAAAAUAAAABAAIAAAAAAAQAAAABAAIAAAAAAAMAAAABAAIAAAAAAAIAAAABAAIAAAAAAAEAAAABAAIAAAAAAAAAAAABAAIAAAAAAP//AAABAAIAAAAAAP7/AAABAAIAAAAAAP3/AAABAAIAAAAAAPz/AAABAAIAAAAAAPv/AAABAAIAAAAAAPr/AAABAAIAAAAAAPn/AAABAAIAAAAAAPj/AAABAAIAAAAAAPf/AAABAAEAAAD//wgAAAABAAMAAAD//wcAAAABAAIAAAD//wYAAAABAAIAAAD//wUAAAABAAIAAAD//wQAAAABAAIAAAD//wMAAAABAAIAAAD//wIAAAABAAIAAAD//wEAAAABAAIAAAD//wAAAAABAAIAAAD/////AAABAAIAAAD///7/AAABAAIAAAD///3/AAABAAIAAAD///z/AAABAAIAAAD///v/AAABAAIAAAD///r/AAABAAIAAAD///n/AAABAAIAAAD///j/AAABAAIAAAD///f/AAABAAEAAAD+/wgAAAABAAMAAAD+/wcAAAABAAIAAAD+/wYAAAABAAIAAAD+/wUAAAABAAIAAAD+/wQAAAABAAIAAAD+/wMAAAABAAIAAAD+/wIAAAABAAIAAAD+/wEAAAABAAIAAAD+/wAAAAABAAIAAAD+////AAABAAIAAAD+//7/AAABAAIAAAD+//3/AAABAAIAAAD+//z/AAABAAIAAAD+//v/AAABAAIAAAD+//r/AAABAAIAAAD+//n/AAABAAIAAAD+//j/AAABAAIAAAD+//f/AAABAAEAAAD9/wgAAAABAAMAAAD9/wcAAAABAAIAAAD9/wYAAAABAAIAAAD9/wUAAAABAAIAAAD9/wQAAAABAAIAAAD9/wMAAAABAAIAAAD9/wIAAAABAAIAAAD9/wEAAAABAAIAAAD9/wAAAAABAAIAAAD9////AAABAAIAAAD9//7/AAABAAIAAAD9//3/AAABAAIAAAD9//z/AAABAAIAAAD9//v/AAABAAIAAAD9//r/AAABAAIAAAD9//n/AAABAAIAAAD9//j/AAABAAIAAAD9//f/AAABAAEAAAD8/wgAAAABAAMAAAD8/wcAAAABAAIAAAD8/wYAAAABAAIAAAD8/wUAAAABAAIAAAD8/wQAAAABAAIAAAD8/wMAAAABAAIAAAD8/wIAAAABAAIAAAD8/wEAAAABAAIAAAD8/wAAAAABAAIAAAD8////AAABAAIAAAD8//7/AAABAAIAAAD8//3/AAABAAIAAAD8//z/AAABAAIAAAD8//v/AAABAAIAAAD8//r/AAABAAIAAAD8//n/AAABAAIAAAD8//j/AAABAAIAAAD8//f/AAABAAEAAAD7/wgAAAABAAMAAAD7/wcAAAABAAIAAAD7/wYAAAABAAIAAAD7/wUAAAABAAIAAAD7/wQAAAABAAIAAAD7/wMAAAABAAIAAAD7/wIAAAABAAIAAAD7/wEAAAABAAIAAAD7/wAAAAABAAIAAAD7////AAABAAIAAAD7//7/AAABAAIAAAD7//3/AAABAAIAAAD7//z/AAABAAIAAAD7//v/AAABAAIAAAD7//r/AAABAAIAAAD7//n/AAABAAIAAAD7//j/AAABAAIAAAD7//f/AAABAAEAAAD6/wgAAAABAAMAAAD6/wcAAAABAAIAAAD6/wYAAAABAAIAAAD6/wUAAAABAAIAAAD6/wQAAAABAAIAAAD6/wMAAAABAAIAAAD6/wIAAAABAAIAAAD6/wEAAAABAAIAAAD6/wAAAAABAAIAAAD6////AAABAAIAAAD6//7/AAABAAIAAAD6//3/AAABAAIAAAD6//z/AAABAAIAAAD6//v/AAABAAIAAAD6//r/AAABAAIAAAD6//n/AAABAAIAAAD6//j/AAABAAIAAAD6//f/AAABAAEAAAD5/wgAAAABAAMAAAD5/wcAAAABAAIAAAD5/wYAAAABAAIAAAD5/wUAAAABAAIAAAD5/wQAAAABAAIAAAD5/wMAAAABAAIAAAD5/wIAAAABAAIAAAD5/wEAAAABAAIAAAD5/wAAAAABAAIAAAD5////AAABAAIAAAD5//7/AAABAAIAAAD5//3/AAABAAIAAAD5//z/AAABAAIAAAD5//v/AAABAAIAAAD5//r/AAABAAIAAAD5//n/AAABAAIAAAD5//j/AAABAAIAAAD5//f/AAABAAEAAAD4/wgAAAABAAMAAAD4/wcAAAABAAIAAAD4/wYAAAABAAIAAAD4/wUAAAABAAIAAAD4/wQAAAABAAIAAAD4/wMAAAABAAIAAAD4/wIAAAABAAIAAAD4/wEAAAABAAIAAAD4/wAAAAABAAIAAAD4////AAABAAIAAAD4//7/AAABAAIAAAD4//3/AAABAAIAAAD4//z/AAABAAIAAAD4//v/AAABAAIAAAD4//r/AAABAAIAAAD4//n/AAABAAIAAAD4//j/AAABAAIAAAD4//f/AAABAAEAAAD3/wgAAAABAAMAAAD3/wcAAAABAAIAAAD3/wYAAAABAAIAAAD3/wUAAAABAAIAAAD3/wQAAAABAAIAAAD3/wMAAAABAAIAAAD3/wIAAAABAAIAAAD3/wEAAAABAAIAAAD3/wAAAAABAAIAAAD3////AAABAAIAAAD3//7/AAABAAIAAAD3//3/AAABAAIAAAD3//z/AAABAAIAAAD3//v/AAABAAIAAAD3//r/AAABAAIAAAD3//n/AAABAAIAAAD3//j/AAABAAIAAAD3//f/AAABAAEAAAD2/wgAAAABAAMAAAD2/wcAAAABAAIAAAD2/wYAAAABAAIAAAD2/wUAAAABAAIAAAD2/wQAAAABAAIAAAD2/wMAAAABAAIAAAD2/wIAAAABAAIAAAD2/wEAAAABAAIAAAD2/wAAAAABAAIAAAD2////AAABAAIAAAD2//7/AAABAAIAAAD2//3/AAABAAIAAAD2//z/AAABAAIAAAD2//v/AAABAAIAAAD2//r/AAABAAIAAAD2//n/AAABAAIAAAD2//j/AAABAAIAAAD2//f/AAABAAEAAAD1/wgAAAABAAMAAAD1/wcAAAABAAIAAAD1/wYAAAABAAIAAAD1/wUAAAABAAIAAAD1/wQAAAABAAIAAAD1/wMAAAABAAIAAAD1/wIAAAABAAIAAAD1/wEAAAABAAIAAAD1/wAAAAABAAIAAAD1////AAABAAIAAAD1//7/AAABAAIAAAD1//3/AAABAAIAAAD1//z/AAABAAIAAAD1//v/AAABAAIAAAD1//r/AAABAAIAAAD1//n/AAABAAIAAAD1//j/AAABAAIAAAD1//f/AAABAAEAAAD0/wgAAAABAAMAAAD0/wcAAAABAAIAAAD0/wYAAAABAAIAAAD0/wUAAAABAAIAAAD0/wQAAAABAAIAAAD0/wMAAAABAAIAAAD0/wIAAAABAAIAAAD0/wEAAAABAAIAAAD0/wAAAAABAAIAAAD0////AAABAAIAAAD0//7/AAABAAIAAAD0//3/AAABAAIAAAD0//z/AAABAAIAAAD0//v/AAABAAIAAAD0//r/AAABAAIAAAD0//n/AAABAAIAAAD0//j/AAABAAIAAAD0//f/AAABAAEAAADz/wgAAAABAAMAAADz/wcAAAABAAIAAADz/wYAAAABAAIAAADz/wUAAAABAAIAAADz/wQAAAABAAIAAADz/wMAAAABAAIAAADz/wIAAAABAAIAAADz/wEAAAABAAIAAADz/wAAAAABAAIAAADz////AAABAAIAAADz//7/AAABAAIAAADz//3/AAABAAIAAADz//z/AAABAAIAAADz//v/AAABAAIAAADz//r/AAABAAIAAADz//n/AAABAAIAAADz//j/AAABAAIAAADz//f/AAABAAEAAADy/wgAAAABAAMAAADy/wcAAAABAAIAAADy/wYAAAABAAIAAADy/wUAAAABAAIAAADy/wQAAAABAAIAAADy/wMAAAABAAIAAADy/wIAAAABAAIAAADy/wEAAAABAAIAAADy/wAAAAABAAIAAADy////AAABAAIAAADy//7/AAABAAIAAADy//3/AAABAAIAAADy//z/AAABAAIAAADy//v/AAABAAIAAADy//r/AAABAAIAAADy//n/AAABAAIAAADy//j/AAABAAIAAADy//f/AAABAAEAAADx/wgAAAABAAMAAADx/wcAAAABAAIAAADx/wYAAAABAAIAAADx/wUAAAABAAIAAADx/wQAAAABAAIAAADx/wMAAAABAAIAAADx/wIAAAABAAIAAADx/wEAAAABAAIAAADx/wAAAAABAAIAAADx////AAABAAIAAADx//7/AAABAAIAAADx//3/AAABAAIAAADx//z/AAABAAIAAADx//v/AAABAAIAAADx//r/AAABAAIAAADx//n/AAABAAIAAADx//j/AAABAAIAAADx//f/AAABAAEAAADw/wgAAAABAAMAAADw/wcAAAABAAIAAADw/wYAAAABAAIAAADw/wUAAAABAAIAAADw/wQAAAABAAIAAADw/wMAAAABAAIAAADw/wIAAAABAAIAAADw/wEAAAABAAIAAADw/wAAAAABAAIAAADw////AAABAAIAAADw//7/AAABAAIAAADw//3/AAABAAIAAADw//z/AAABAAIAAADw//v/AAABAAIAAADw//r/AAABAAIAAADw//n/AAABAAIAAADw//j/AAABAAIAAADw//f/AAABAAEAAADv/wgAAAABAAMAAADv/wcAAAABAAIAAADv/wYAAAABAAIAAADv/wUAAAABAAIAAADv/wQAAAABAAIAAADv/wMAAAABAAIAAADv/wIAAAABAAIAAADv/wEAAAABAAIAAADv/wAAAAABAAIAAADv////AAABAAIAAADv//7/AAABAAIAAADv//3/AAABAAIAAADv//z/AAABAAIAAADv//v/AAABAAIAAADv//r/AAABAAIAAADv//n/AAABAAIAAADv//j/AAABAAIAAADv//f/AAABAAEAAADu/wgAAAABAAMAAADu/wcAAAABAAIAAADu/wYAAAABAAIAAADu/wUAAAABAAIAAADu/wQAAAABAAIAAADu/wMAAAABAAIAAADu/wIAAAABAAIAAADu/wEAAAABAAIAAADu/wAAAAABAAIAAADu////AAABAAIAAADu//7/AAABAAIAAADu//3/AAABAAIAAADu//z/AAABAAIAAADu//v/AAABAAIAAADu//r/AAABAAIAAADu//n/AAABAAIAAADu//j/AAABAAIAAADu//f/AAABAAEAAADt/wgAAAABAAMAAADt/wcAAAABAAIAAADt/wYAAAABAAIAAADt/wUAAAABAAIAAADt/wQAAAABAAIAAADt/wMAAAABAAIAAADt/wIAAAABAAIAAADt/wEAAAABAAIAAADt/wAAAAABAAIAAADt////AAABAAIAAADt//7/AAABAAIAAADt//3/AAABAAIAAADt//z/AAABAAIAAADt//v/AAABAAIAAADt//r/AAABAAIAAADt//n/AAABAAIAAADt//j/AAABAAIAAADt//f/AAABAAEAAADs/wgAAAAAAAMAAADs/wcAAAAAAAIAAADs/wYAAAAAAAIAAADs/wUAAAAAAAIAAADs/wQAAAAAAAIAAADs/wMAAAAAAAIAAADs/wIAAAAAAAIAAADs/wEAAAAAAAIAAADs/wAAAAAAAAIAAADs////AAAAAAIAAADs//7/AAAAAAIAAADs//3/AAAAAAIAAADs//z/AAAAAAIAAADs//v/AAAAAAIAAADs//r/AAAAAAIAAADs//n/AAAAAAIAAADs//j/AAAAAAIAAADs//f/AAAAAAEAAAA=")
tile_set = SubResource("TileSet_alh3a")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-264, -144)
anchor_mode = 0
zoom = Vector2(1.171, 1.24)

[node name="Player" parent="." instance=ExtResource("2_gl6un")]
position = Vector2(-224, 121)

[node name="Boundry" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Boundry"]
position = Vector2(0, 140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundry/StaticBody2D"]
position = Vector2(0, 4)
shape = SubResource("WorldBoundaryShape2D_j5yw3")

[node name="StaticBody2D2" type="StaticBody2D" parent="Boundry"]
position = Vector2(0, -140)
rotation = -3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundry/StaticBody2D2"]
shape = SubResource("WorldBoundaryShape2D_j5yw3")

[node name="StaticBody2D3" type="StaticBody2D" parent="Boundry"]
position = Vector2(-224, 8)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundry/StaticBody2D3"]
shape = SubResource("WorldBoundaryShape2D_j5yw3")

[node name="StaticBody2D4" type="StaticBody2D" parent="Boundry"]
position = Vector2(288, -24)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundry/StaticBody2D4"]
position = Vector2(-0.999964, -10)
shape = SubResource("WorldBoundaryShape2D_j5yw3")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
custom_minimum_size = Vector2(-0.6, 0)
offset_left = 8.0
offset_right = 73.0
offset_bottom = 25.0
rotation = -0.00218606
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_b2bpf")
theme_override_font_sizes/font_size = 24
text = "Score: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.5
offset_top = -48.5
offset_right = 236.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.607843, 0.443137, 0, 1)
theme_override_constants/outline_size = 60
theme_override_fonts/font = ExtResource("5_b2bpf")
theme_override_font_sizes/font_size = 120
text = "GAME OVER"

[node name="PowerUpUI" type="Control" parent="UI" node_paths=PackedStringArray("fire_rate_timer", "fire_rate_indicator")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_acvyw")
fire_rate_timer = NodePath("FireRateTimer")
fire_rate_indicator = NodePath("Indicators/FireRateIndicator")

[node name="FireRateTimer" type="ProgressBar" parent="UI/PowerUpUI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
max_value = 10.0
show_percentage = false

[node name="Indicators" type="HBoxContainer" parent="UI/PowerUpUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 8.0
offset_right = -360.0
offset_bottom = 16.0
grow_horizontal = 0

[node name="FireRateIndicator" type="TextureRect" parent="UI/PowerUpUI/Indicators"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_wxwew")
expand_mode = 3
stretch_mode = 3

[node name="Control" type="Control" parent="UI" node_paths=PackedStringArray("MenuPanel")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_71axn")
script = ExtResource("7_dahhg")
MenuPanel = NodePath("Pause")

[node name="TextureButton" type="TextureButton" parent="UI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 24.0
grow_horizontal = 0
focus_mode = 0
texture_normal = ExtResource("6_bf53h")
texture_pressed = ExtResource("7_71axn")
texture_hover = ExtResource("8_dahhg")

[node name="Pause" type="Panel" parent="UI/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Control/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -50.0
offset_right = 80.5
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_b2bpf")
theme_override_font_sizes/font_size = 48
text = "PAUSED"
metadata/_edit_use_anchors_ = true

[node name="ResumeButton" type="Button" parent="UI/Control/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_right = 26.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Resume"

[node name="QuitButton" type="Button" parent="UI/Control/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = 30.0
offset_right = 26.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Quit"

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[node name="FailSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7lihs")

[connection signal="timeout" from="Timer" to="." method="_new_slime"]
[connection signal="pressed" from="UI/Control/TextureButton" to="UI/Control" method="_pause"]
[connection signal="pressed" from="UI/Control/Pause/ResumeButton" to="UI/Control" method="_resume"]
[connection signal="pressed" from="UI/Control/Pause/QuitButton" to="UI/Control" method="_quit"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
